--- a/jsfdrools/src/main/webapp/index.xhtml
+++ b/jsfdrools/src/main/webapp/index.xhtml
@@ -4,12 +4,12 @@
  xmlns:h="http://java.sun.com/jsf/html"
  xmlns:p="http://primefaces.org/ui">
  <h:head>
-  <title>JSF - Myfaces Example</title>
+  <title>JSF - Drools</title>
  </h:head>
  <h:body>
-  	<h1>Hello World PrimeFaces</h1>
+  	<h1>Hello World!</h1>
 	<h:form>
-	   <p:editor value="#{helloBean.greeting}" />
+	   <p:editor value="#{data.greeting}" />
 	</h:form>
  </h:body>
 </html>
