[hello_jsf] remove unnecessary dependencies ,

--- a/hellojsf/src/main/webapp/index.xhtml
+++ b/hellojsf/src/main/webapp/index.xhtml
@@ -9,7 +9,7 @@
  <h:body>
   	<h1>Hello World!</h1>
 	<h:form>
-	   <p:editor value="#{data.greeting}" />
+	   <h:outputText value="#{data.greeting}" />
 	</h:form>
  </h:body>
 </html>
